# streamlit-arborist

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  local_mapping.json  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/actions/build-frontend/: action.yaml
.github/workflows/: build-release.yaml  test-build-release.yaml  test.yaml  tests.yaml
app/: example.py  requirements.txt
docs/: Makefile  api.rst  conf.py  index.rst  releases.rst  usage.rst
e2e/: conftest.py  e2e_utils.py  test_template.py  test_tree_checkbox.py  test_tree_view.py
scripts/: build.sh  setup.sh
streamlit_arborist/: __init__.py  _version.py  example.py
streamlit_arborist/frontend/: package-lock.json  package.json
streamlit_arborist/frontend/public/: bootstrap.min.css  index.html
streamlit_arborist/frontend/src/: MyComponent.tsx  TreeCheckbox.tsx  TreeView.tsx  arborist.module.css  index.tsx  shared.tsx
