[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-arborist"
version = "0.1.0"
description = "Streamlit component for creating tree views"
authors = [{name = "Gabriel Mello Silva", email = "gabriel.zyx@gmail.com"}]
requires-python = ">=3.9"
dependencies = ["streamlit>=1.29"]

[project.urls]
homepage = "https://github.com/gabriel-msilva/streamlit-arborist"
repository = "https://github.com/gabriel-msilva/streamlit-arborist"

[tool.setuptools.packages.find]
include = ["streamlit_arborist"]
namespaces = false

[tool.pixi.project]
# Channel priority is dictated by the order in the array
channels = ["conda-forge", "microsoft"]
platforms = ["linux-64"]
# Create a mapping for `microsoft` channel so that `playwright` is not installed with
# pypi too. See issue: https://github.com/prefix-dev/pixi/issues/1230
conda-pypi-map = { microsoft = "local_mapping.json" }

[tool.pixi.dependencies]
python = "3.9.*"
nodejs = "*"
streamlit = ">=1.29"

[tool.pixi.pypi-dependencies]
streamlit-arborist = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
playwright = { version = "1.42.0.*", channel = "microsoft" }
pre-commit = "*"
pytest = "8.*"
requests = "2.32.3.*"

[tool.pixi.feature.dev.pypi-dependencies]
pytest-playwright-snapshot = "*"
pytest-rerunfailures = "*"

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.tasks]
setup = "pre-commit install && (cd streamlit_arborist/frontend && npm clean-install -e dev)"
backend = "streamlit run streamlit_arborist/example.py"
frontend = "cd streamlit_arborist/frontend && npm run start"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9", # pycodestyle
  "F",              # Pyflakes
  "I",              # isort
  "A",              # flake8-builtins
  "B",              # flake8-bugbear
  "SIM",            # flake8-simplify
]
unfixable = ["F401"]
