[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-arborist"
version = "0.1.0"
description = "Streamlit component for creating tree views"
authors = [{ name = "Gabriel Mello Silva", email = "gabriel.zyx@gmail.com" }]
license-files = ["LICENSE"]
requires-python = ">=3.9"
# Version 1.36.0 implements `on_change` for `CustomComponent`
dependencies = ["streamlit>=1.36.0"]

[project.urls]
homepage = "https://github.com/gabriel-msilva/streamlit-arborist"
repository = "https://github.com/gabriel-msilva/streamlit-arborist"

[dependency-groups]
dev = ["pre-commit==4.2.0", { include-group = "test" }]
test = [
  "pytest==7.4.0",
  "playwright==1.48.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
  "requests==2.31.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["streamlit_arborist"]
namespaces = false

[tool.pytest.ini_options]
addopts = "--headed --browser firefox"
testpaths = ["e2e"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",  # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
unfixable = ["F401"]
