[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlit-arborist"
version = "0.1.0"
description = "Streamlit component for creating tree views"
authors = [{ name = "Gabriel Mello Silva", email = "gabriel.zyx@gmail.com" }]
license-files = ["LICENSE"]
requires-python = ">=3.9"
# Version 1.36.0 implements `on_change` for `CustomComponent`
dependencies = ["streamlit>=1.36.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/gabriel-msilva/streamlit-arborist"
repository = "https://github.com/gabriel-msilva/streamlit-arborist"

[dependency-groups]
dev = ["pre-commit==4.2.0", { include-group = "tests" }]
tests = [
  "pytest==7.4.0",
  "playwright==1.48.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
  "requests==2.31.0",
]
docs = ["sphinx==7.4.7", "sphinx-rtd-theme==3.0.2"]

[tool.pytest.ini_options]
testpaths = ["e2e"]
addopts = "-vv"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",  # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
unfixable = ["F401"]
